# AstroCal

./: 1.1_PhotometryOne.ipynb  1_Reduction.ipynb  281-Lucretia.csv  2_Merge.ipynb  3_Analysis.ipynb  3_Analysis_AIJ.ipynb  4_LightCurveInversion.ipynb  README.md  pyproject.toml
src/astrocal/: __init__.py  astrometry.py  cpi.py  master.py  photometry.py  reduction.py
