[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astrocal"
version = "0.1.0"
authors = [
    {name="Aurélien Genin", email="aurelien.genin@polytechnique.org"}
]
description = "Package to calibrate astro images and analyse them"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "astropy",
    "astroquery",
    "photutils",
    "reproject",
    "scikit-learn",
    "scipy>=1.12.0"
]

[project.urls]
Source = ""

[tool.setuptools.packages.find]
where = ["src"]